--- a/artifact-03.html
+++ b/artifact-03.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Josh Gibson">
 	<meta name="robots" content="noindex">
 	<title>Rhombus</title>
-	<link rel="stylesheet" href="artifact-03.css" type="text/css">
+	<link rel="stylesheet" href="style.css" type="text/css">
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/fantasque-sans-mono" type="text/css"/> 
 </head>
 
@@ -51,7 +51,7 @@
 		
 		<div id="output"></div>
 		
-		<script src="artifact-03.js"></script>
+		<script src="style.js"></script>
 	
 	</div>
 	
