--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Artifact 3 - Rhombus Example">
     <meta charset="utf-8">
     <title>Artifact 3 - Rhombus</title>
-    <link rel="stylesheet" href="A03.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <label>What is the size of Rhombus?</label><br>
@@ -46,6 +46,6 @@
     <div id="downLeft"></div>
     <div id="downRight"></div>
 
-    <script src="A03.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
